<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.yinzhiwu</groupId>
  <artifactId>yiwu</artifactId>
  <packaging>war</packaging>
  <version>1.2.3</version>
  <name>yiwu</name>
  <url>http://maven.apache.org</url>
  
  <profiles>
  	<profile>
  		<id>dev</id>
  		<properties>
  			<environment>development</environment>
  		</properties>
  	</profile>
  	<profile>
  		<id>test</id>
  		<properties>
  			<environment>test</environment>
  		</properties>
  		<activation>
  			<activeByDefault>true</activeByDefault>
  		</activation>
  	</profile>
  	<profile>
  		<id>prod</id>
  		<properties>
  			<environment>production</environment>
  		</properties>
  	</profile>
  </profiles>
  
   <properties>
	   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
	  	<spring.version>4.3.6.RELEASE</spring.version>
	  	<aspectj.version>1.8.10</aspectj.version>
	  	<hibernate.version>5.2.6.Final</hibernate.version>
	  	<hibernate.validator.version>5.2.5.Final</hibernate.validator.version>
	  	<jackson.version>2.8.7</jackson.version>
	  	<quartz.version>2.3.0</quartz.version>
	  	<qiniu.version>7.2.6</qiniu.version>
	  	<swagger.version>2.2.2</swagger.version>
  </properties>
  
  <dependencies>	
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    
    <!-- #### java servlet #### -->
    <dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>javax.servlet-api</artifactId>
		<version>3.1.0</version>
		<scope>provided</scope>
	</dependency>   
	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>jstl</artifactId>
		<version>1.2</version>
		<scope>runtime</scope>
	</dependency>
	
	
	<!-- ####### spring #########-->
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-webmvc</artifactId>
		<version>${spring.version}</version>
	</dependency>
	<dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context-support</artifactId>
        <version>${spring.version}</version>
    </dependency>
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-orm</artifactId>
		<version>${spring.version}</version>
	</dependency>
	<dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context-support</artifactId>
        <version>${spring.version}</version>
    </dependency>
    <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
		<version>${spring.version}</version>
	</dependency>
	
	<!-- #### aspectj 切面编程   #### -->
	<dependency>
	    <groupId>org.aspectj</groupId>
	    <artifactId>aspectjweaver</artifactId>
	    <version>${aspectj.version}</version>
	</dependency>
	<dependency>
		<groupId>org.aspectj</groupId>
		<artifactId>aspectjrt</artifactId>
		<version>${aspectj.version}</version>
	</dependency>

	<!-- ### database connector ### -->
	<dependency>
		<groupId>mysql</groupId>
		<artifactId>mysql-connector-java</artifactId>
		<version>5.1.41</version>
	</dependency>
	<dependency>
	    <groupId>com.mchange</groupId>
	    <artifactId>c3p0</artifactId>
	    <version>0.9.5.2</version>
	</dependency>

	<!-- ### hibernate  ###-->
	<dependency>
	    <groupId>org.hibernate</groupId>
	    <artifactId>hibernate-core</artifactId>
	    <version>${hibernate.version}</version>
	</dependency>
	<dependency>
	    <groupId>org.hibernate</groupId>
	    <artifactId>hibernate-validator</artifactId>
	    <version>${hibernate.validator.version}</version>
	</dependency>

	<dependency>
		<groupId>org.hibernate</groupId>
		<artifactId>hibernate-validator-annotation-processor</artifactId>
		<version>${hibernate.validator.version}</version>
	</dependency>
	<dependency>
		<groupId>org.hibernate</groupId>
		<artifactId>hibernate-ehcache</artifactId>
		<version>${hibernate.version}</version>
	</dependency>
	
	<!-- json支持 -->
	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>${jackson.version}</version>
	</dependency>
	
	
	<!-- 极光推送支持 -->
	<dependency>
	    <groupId>cn.jpush.api</groupId>
	    <artifactId>jmessage-client</artifactId>
	    <version>1.0.1</version>
	</dependency>
	<dependency>
	    <groupId>cn.jpush.api</groupId>
	    <artifactId>jiguang-common</artifactId>
	    <version>1.0.3</version>
		</dependency>
	
	<!-- For log4j  -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-log4j12</artifactId>
		<version>1.7.7</version>
	</dependency> 	
	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.17</version>
	</dependency>
	 
	<!-- apache 文件上传依赖包  -->
	<dependency>
	   <groupId>commons-fileupload</groupId>
	    <artifactId>commons-fileupload</artifactId>
	    <version>1.3.2</version>
	 </dependency>
	 
	<!-- quartz 定时任务  -->
	<dependency>
	    <groupId>org.quartz-scheduler</groupId>
	    <artifactId>quartz</artifactId>
	    <version>${quartz.version}</version>
	</dependency>


	<!-- ##########   百度Ueditor ################ -->
	<dependency>
	    <groupId>cn.songxinqiang</groupId>
	    <artifactId>com.baidu.ueditor</artifactId>
	    <version>1.1.2-offical</version>
	</dependency>
	
	<!-- #########  七牛云  ########### -->
	<dependency>
	  <groupId>com.qiniu</groupId>
	  <artifactId>qiniu-java-sdk</artifactId>
	  <version>${qiniu.version}</version>
	</dependency>	
		
	<!-- ######### swagger support ############ -->
    <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger2</artifactId>
         <version>${swagger.version}</version>
     </dependency>
      <!--petstore是官方的一个demo，加入此依赖是为了稍后参考接口描述的编写   生产系统中无须添加-->
     <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-petstore</artifactId>
         <version>${swagger.version}</version>
     </dependency>
  </dependencies>
  
  <build>
    <finalName>yiwu</finalName>
    <resources>
    	<resource>
    		<directory>src/main/resources</directory>
    		<excludes>
    			<exclude>environment/development/**</exclude>
    			<exclude>environment/test/**</exclude>
    			<exclude>environment/production/**</exclude>
    			<exclude>dbscripts/**</exclude>
    			<exclude>examples/*</exclude>
    		</excludes>
    	</resource>
    	<resource>
    		<directory>src/main/resources/environment/${environment}</directory>
    	 	<targetPath></targetPath>
    	</resource>
    </resources>
    <plugins>
    	<plugin>
    		<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.6.1</version>
			<configuration>
			        <source>1.8</source>  
			        <target>1.8</target>
			        <encoding>UTF-8</encoding>
			        <!-- 打包时跳过测试  -->
			        <skipTests>true</skipTests>  
			</configuration>
    	</plugin>
    	
   		 <plugin>
	            <groupId>org.apache.tomcat.maven</groupId>
		        <artifactId>tomcat-maven-plugin</artifactId>
		        <version>2.2</version>
	              <configuration>
	                      <url>http://localhost:8080/manager</url>
	                      <server>tomcat</server> 
	                      <username>tomcat</username>
	                      <password>tomcat</password>
	              </configuration>
         </plugin>
         
         <!--  
         <plugin>  
		    <groupId>org.codehaus.mojo</groupId>  
		    <artifactId>tomcat-maven-plugin</artifactId>  
		    <version>1.2-SNAPSHOT</version>  
		    <configuration>  
		        <url>http://localhost:8080/manager/html</url>  
		        <server>tomcat</server>  
		        <path>/yiwu</path>  
		    </configuration>  
		</plugin>    -->
    </plugins>
  </build>
  
</project>
